[package]
name = "huffman-code"
version = "0.1.0"
edition = "2021"
description = "Huffman coding: frequency analysis, tree construction, canonical codes, adaptive Huffman encoding and decoding"
license = "MIT"
repository = "https://github.com/SuperInstance/huffman-code"
keywords = ["huffman", "compression", "encoding", "canonical", "adaptive"]
categories = ["algorithms", "compression", "data-structures", "encoding"]
readme = "README.md"

[lib]
name = "huffman_code"
path = "src/lib.rs"
